Removed stack, refactoring